--- a/source/scss/blocks/page-works.scss
+++ b/source/scss/blocks/page-works.scss
@@ -48,6 +48,11 @@
         display: flex;
         justify-content: center;
         margin-bottom: 50px;
+
+        .textarea__control,
+        .textfield__control {
+            color: #fff;
+        }
     }
 
     &__bottom {
