--- a/source/scss/blocks/formfield.scss
+++ b/source/scss/blocks/formfield.scss
@@ -1,59 +1,13 @@
 @import './../params';
 @import './../mixins';
 
-.textfield {
-    display: flex;
-    width: 100%;
-
-    &__wrapper {
-        position: relative;
-        flex-grow: 1;
-        flex-shrink: 0;
-    }
-
-    &__addon {
-        display: flex;
-        flex-grow: 0;
-        flex-shrink: 0;
-        width: 45px;
-        height: 45px;
-        background-color: #f0efe9;
-    }
-
-    &__addon-icon {
-        margin: auto;
-        color: #c4cbcd;
-        font-size: 18px;
-    }
-
-    &__control {
-        width: 100%;
-        height: 45px;
-        line-height: 45px;
-        padding: 0 15px;
-        border: 0 none;
-        border-radius: 0;
-        color: #373e42;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-
-        &:focus {
-            outline: 0 none;
-        }
-    }
-}
-
 // Error state mixin
-.textfield.formfield_state_error {
-    .textfield__addon-icon {
-        color: $color-error;
-    }
-
-    .textfield__control {
+.formfield_state_error {
+    .formfield__control {
         outline: 1px solid $color-error;
     }
 
-    .textfield__error-message {
+    .formfield__error-message {
         padding: 10px 20px;
         margin-top: 13px;
         position: absolute;
@@ -91,6 +45,12 @@
             margin-right: -10px;
             background-color: $color-error;
         }
+    }
+}
+
+.textfield.formfield_state_error {
+    .textfield__addon-icon {
+        color: $color-error;
     }
 }
 
