--- a/source/scss/blocks/nav.scss
+++ b/source/scss/blocks/nav.scss
@@ -57,7 +57,14 @@
 
     .nav__link {
         display: block;
+        width: 100%;
         padding: 10px;
+        border: 0 none;
+        background-color: transparent;
+        font-family: 'Roboto', sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        cursor: pointer;
     }
 }
 
