--- a/source/scss/blocks/textarea.scss
+++ b/source/scss/blocks/textarea.scss
@@ -2,6 +2,13 @@
 @import './../mixins';
 
 .textarea {
+    display: block;
+
+    &__wrapper {
+        display: block;
+        position: relative;
+    }
+
     &__control {
         width: 100%;
         padding: 10px 15px;
