--- a/source/pages/about/index.pug
+++ b/source/pages/about/index.pug
@@ -121,6 +121,7 @@ block content
                         span.contacts__text г. Новосибирск, ул. Инская, д.4
 
         .map__container
+            .map__map
 
 block bottom
     //- Menu
