--- a/source/scss/blocks/map.scss
+++ b/source/scss/blocks/map.scss
@@ -6,9 +6,9 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    padding-bottom: 185px;
     margin-bottom: -185px;
     position: relative;
+    z-index: 10;
 
     &__container {
         width: 100%;
@@ -16,8 +16,15 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-size: cover;
-        background: url(./../../images/map.png);
+    }
+
+    &__map {
+        width: 2000px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     &__title {
@@ -26,6 +33,7 @@
 
     &__contacts {
         width: 580px;
+        margin-top: -185px;
         padding: 30px 20px 0;
         background-color: rgba(255, 255, 255, .7);
         position: relative;
@@ -49,6 +57,8 @@
         }
 
         .contacts__icon {
+            flex-shrink: 0;
+            flex-grow: 0;
             fill: #004cd1;
             width: 45px;
             height: 45px;
@@ -107,6 +117,10 @@
             height: 515px;
             position: static;
         }
+
+        &__map {
+            margin-left: -350px;
+        }
     }
 }
 
@@ -114,6 +128,10 @@
 @include media-sm {
     .map {
         margin-bottom: -270px;
+
+        &__container {
+            margin-left: -150px;
+        }
 
         &__contacts {
             width: 348px;
