--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -15,7 +15,7 @@ block content
         img(class=`page-welcome__bg` src=require(`./../../images/night_no_bg.png`))
 
         .page-welcome__sign-in
-            button(type=`button` class=`flip-panel__front-toggler btn btn_w_100 btn_border_white btn_hover-bg_blue btn_xs-size_small`)
+            button(type=`button` class=`flip-panel__front-toggler btn btn_w_100 btn_border_white btn_hover-bg_blue`)
                 span.btn__text.text.text_color_white.text_weight_500 Авторизоваться
 
         .page-welcome__flip-panel.flip-panel
