--- a/source/scss/base.scss
+++ b/source/scss/base.scss
@@ -11,7 +11,7 @@
 }
 
 ::-webkit-input-placeholder {
-    color: fff;
+    color: #fff;
 }
 
 ::-moz-placeholder {
@@ -38,4 +38,8 @@ body {
     font-family: 'Roboto', sans-serif;
     line-height: 24px;
     position: relative;
+}
+
+button {
+    font-family: 'Roboto', sans-serif;
 }
