--- a/source/scss/blocks/combo-slider.scss
+++ b/source/scss/blocks/combo-slider.scss
@@ -58,6 +58,7 @@
     &__nav {
         width: 50%;
         height: (226 / 752 * 100vh);
+        margin-top: auto;
         display: flex;
         order: 3;
     }
