--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -73,5 +73,9 @@
         &__body {
             padding-top: 45px;
         }
+
+        &__group-title {
+            margin-bottom: 15px;
+        }
     }
 }
