--- a/source/scss/blocks/heading.scss
+++ b/source/scss/blocks/heading.scss
@@ -17,6 +17,11 @@
 
 // Size
 .heading_size {
+    &_21 {
+        font-size: 21px;
+        line-height: 34px;
+    }
+
     &_28 {
         font-size: 28px;
         line-height: 34px;
@@ -96,6 +101,11 @@
 @include media-sm {
     // Size
     .heading_sm-size {
+        &_21 {
+            font-size: 21px;
+            line-height: 34px;
+        }
+
         &_30 {
             font-size: 30px;
             line-height: 36px;
