--- a/source/scss/blocks/textfield.scss
+++ b/source/scss/blocks/textfield.scss
@@ -3,6 +3,7 @@
 
 .textfield {
     display: flex;
+    align-items: center;
     width: 100%;
 
     &__wrapper {
@@ -40,6 +41,16 @@
         &:focus {
             outline: 0 none;
         }
+    }
+
+    &__measure {
+        padding-left: 1em;
+    }
+
+    &__label {
+        font-weight: 400;
+        flex-grow: 0;
+        flex-shrink: 0;
     }
 
     ::-webkit-input-placeholder {
@@ -142,6 +153,31 @@
     }
 }
 
+.textfield_bg_white {
+    .textfield__control {
+        background-color: #fff;
+    }
+}
+
+.textfield_size {
+    &_small {
+        .textfield__control {
+            height: 32px;
+            line-height: 32px;
+            width: 46px;
+            font-size: 14px;
+            padding: 0 10px;
+            text-align: center;
+        }
+    }
+}
+
+.textfiled_corners_rounded {
+    .textfield__control {
+        border-radius: 4px;
+    }
+}
+
 // @media
 // xs
 @include media-xs {
@@ -156,6 +192,16 @@
         &__addon {
             width: 40px;
             height: 40px;
+        }
+
+        &__label {
+            width: 50%;
+        }
+    }
+
+    .textfield_size_small {
+        .textfield__control {
+            padding: 0 10px;
         }
     }
 }
