Size, weight and transform text modifiers transferred from block heading to text

--- a/source/pages/about/index.pug
+++ b/source/pages/about/index.pug
@@ -33,7 +33,7 @@ block content
             .user__avatar.avatar
                 img(class=`avatar__img` src=require(`./../../images/user-avatar.jpg`))
 
-            h1.user__title.heading.heading_color_white.heading_size_35.heading_xs-size_21.heading_weight_500 Владимир Астахов
+            h1.user__title.heading.text.text_color_white.text_size_35.text_xs-size_21.text_weight_500 Владимир Астахов
 
             p.user__text.text.text_color_white Личный сайт веб разработчика
 
@@ -49,21 +49,21 @@ block content
     section#section-about.about
         section.section.about__info
             .about__align-wrapper
-                h1.about__title.heading.heading_font_2.heading_transform_uppercase.heading_size_63.heading_sm-size_49.heading_xs-size_35
+                h1.about__title.heading.heading_font_2.text.text_transform_uppercase.text_size_63.text_sm-size_49.text_xs-size_35
                     svg(class=`about__title-bg-img` viewBox=svgStars2.viewBox): use(xlink:href=svgStars2.symbol)
                     | Обо мне
 
                 img(class=`img img_width_100` src=require(`./../../images/about.jpg`))
             
                 .section__content
-                    h4.section__title.heading.heading_font_2.heading_transform_uppercase.heading_size_35.heading_sm-size_30.heading_xs-size_21.heading_decor_border-spacer Кто я
+                    h4.section__title.heading.heading_font_2.heading_decor_border-spacer.text.text_transform_uppercase.text_size_35.text_sm-size_30.text_xs-size_21 Кто я
                     
                     p.section__text.text Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
                     p.section__text.text Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
 
         section.section.about__skills
             .section__content
-                h4.section__title.heading.heading_font_2.heading_transform_uppercase.heading_size_35.heading_sm-size_30.heading_xs-size_21.heading_decor_border-spacer Чем я могу быть вам полезен
+                h4.section__title.heading.heading_font_2.heading_decor_border-spacer.text.text_transform_uppercase.text_size_35.text_sm-size_30.text_xs-size_21 Чем я могу быть вам полезен
                 
                 p.section__text.text Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
 
@@ -100,7 +100,7 @@ block content
 
     section.section.map
         .map__contacts
-            h4.map__title.heading.heading_font_2.heading_transform_uppercase.heading_size_35.heading_sm-size_30.heading_xs-size_35.heading_decor_border-spacer Контакты
+            h4.map__title.heading.heading_font_2.heading_decor_border-spacer.text.text_transform_uppercase.text_size_35.text_sm-size_30.text_xs-size_35 Контакты
 
             ul.contacts.map__contacts-list
                 li.contacts__item
