--- a/source/scss/blocks/tabs.scss
+++ b/source/scss/blocks/tabs.scss
@@ -17,7 +17,7 @@
             min-width: 179px;
             padding: 18px;
             color: rgba(71, 75, 87, .7);
-            font-weight: 500;
+            font-weight: 700;
             text-align: center;
             text-transform: uppercase;
         }
@@ -36,8 +36,16 @@
             flex-direction: column;
         }
 
-        .nav__link {
+        .nav__item {
+            border-right: 0 none;
             border-bottom: 1px solid #fff;
+
+            &:last-child {
+                border-bottom: 0 none;
+            }
+        }
+
+        .nav__link {
             font-size: 14px;
 
             &.nav__link_state_active {
@@ -52,6 +60,10 @@
     .tabs {
         .nav__item {
             flex-grow: 1;
+
+            &:last-child {
+                border-right: 0 none;
+            }
         }
     }
 }
