--- a/source/scss/blocks/textfield.scss
+++ b/source/scss/blocks/textfield.scss
@@ -48,9 +48,10 @@
     }
 
     &__label {
-        font-weight: 400;
-        flex-grow: 0;
+        flex-grow: 1;
         flex-shrink: 0;
+        padding-right: 10px;
+        font-weight: 400;
     }
 
     ::-webkit-input-placeholder {
@@ -70,7 +71,7 @@
     }
 }
 
-// Error state mixin
+// Error state
 .textfield.formfield_state_error {
     .textfield__addon-icon {
         color: $color-error;
@@ -121,7 +122,7 @@
     }
 }
 
-// Correct state mixin
+// Correct state
 .textfield.formfield_state_correct {
     .textfield__addon-icon {
         color: #0548be;
@@ -153,12 +154,14 @@
     }
 }
 
+// Bg color
 .textfield_bg_white {
     .textfield__control {
         background-color: #fff;
     }
 }
 
+// Size
 .textfield_size {
     &_small {
         .textfield__control {
@@ -169,13 +172,16 @@
             padding: 0 10px;
             text-align: center;
         }
+
+        .textfield__control_corners_rounded {
+            border-radius: 4px;
+        }
     }
 }
 
-.textfiled_corners_rounded {
-    .textfield__control {
-        border-radius: 4px;
-    }
+// Rounded corners
+.textfiled__control_corners_rounded {
+    border-radius: 5px;
 }
 
 // @media
