--- a/source/scss/blocks/page-admin.scss
+++ b/source/scss/blocks/page-admin.scss
@@ -2,9 +2,44 @@
 @import './../mixins';
 
 .page-admin {
+    min-height: 100%;
     background-color: #f5f7f7;
 
+    &__bg {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: url('./../../images/layout-bg.jpg') no-repeat center bottom;
+        background-size: cover;
+
+        &::after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: rgba(255, 255, 255, .85);
+        }
+    }
+
+    &__tabs {
+        position: relative;
+        z-index: 1;
+    }
+
     &__header {
+        position: fixed;
+        z-index: 3;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    &__header-wrapper {
         display: flex;
         align-items: center;
         background-color: #0548be;
@@ -19,6 +54,12 @@
         margin-left: auto;
         color: #fff;
     }
+
+    &__body {
+        padding-top: 140px;
+        position: relative;
+        z-index: 2;
+    }
 }
 
 // @media
@@ -26,6 +67,10 @@
 @include media-xs {
     .page-admin {
         &__header {
+            position: relative;
+        }
+
+        &__header-wrapper {
             flex-direction: column;
             justify-content: center;
             padding: 14px;
@@ -39,14 +84,9 @@
             order: 1;
             margin-left: 0;
         }
+
+        &__body {
+            padding-top: 0;
+        }
     }
 }
-
-// // sm
-// @include media-sm {
-//     .page-admin {
-//         &__header {
-//             padding: 23px;
-//         }
-//     }
-// }
