--- a/source/scss/export/forms.scss
+++ b/source/scss/export/forms.scss
@@ -1,6 +1,7 @@
 @import '~Scss/blocks/textfield';
 @import '~Scss/blocks/textarea';
 @import '~Scss/blocks/formfield';
+@import '~Scss/blocks/filefield';
 @import '~Scss/blocks/form-message';
 @import '~Scss/blocks/checkbox';
 @import '~Scss/blocks/radio';
